src/bootstrap/bloodc/src/parser/snapshots/bloodc__parser__tests__block_as_binary_operand.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [],
    declarations: [
        Function(
            FnDecl {
                attrs: [],
                vis: Private,
                qualifiers: FnQualifiers {
                    is_const: false,
                    is_async: false,
                    is_unsafe: false,
                },
                name: Spanned {
                    node: SymbolU32 {
                        value: 1,
                    },
                    span: Span {
                        start: 3,
                        end: 4,
                        start_line: 1,
                        start_col: 4,
                    },
                },
                type_params: None,
                params: [],
                return_type: None,
                effects: None,
                spec_clauses: [],
                where_clause: None,
                body: Some(
                    Block {
                        statements: [],
                        expr: Some(
                            Expr {
                                kind: Binary {
                                    op: Add,
                                    left: Expr {
                                        kind: Block(
                                            Block {
                                                statements: [],
                                                expr: Some(
                                                    Expr {
                                                        kind: Binary {
                                                            op: Add,
                                                            left: Expr {
                                                                kind: Literal(
                                                                    Literal {
                                                                        kind: Int {
                                                                            value: 1,
                                                                            suffix: None,
                                                                        },
                                                                        span: Span {
                                                                            start: 11,
                                                                            end: 12,
                                                                            start_line: 1,
                                                                            start_col: 12,
                                                                        },
                                                                    },
                                                                ),
                                                                span: Span {
                                                                    start: 11,
                                                                    end: 12,
                                                                    start_line: 1,
                                                                    start_col: 12,
                                                                },
                                                            },
                                                            right: Expr {
                                                                kind: Literal(
                                                                    Literal {
                                                                        kind: Int {
                                                                            value: 2,
                                                                            suffix: None,
                                                                        },
                                                                        span: Span {
                                                                            start: 15,
                                                                            end: 16,
                                                                            start_line: 1,
                                                                            start_col: 16,
                                                                        },
                                                                    },
                                                                ),
                                                                span: Span {
                                                                    start: 15,
                                                                    end: 16,
                                                                    start_line: 1,
                                                                    start_col: 16,
                                                                },
                                                            },
                                                        },
                                                        span: Span {
                                                            start: 11,
                                                            end: 16,
                                                            start_line: 1,
                                                            start_col: 12,
                                                        },
                                                    },
                                                ),
                                                span: Span {
                                                    start: 9,
                                                    end: 18,
                                                    start_line: 1,
                                                    start_col: 10,
                                                },
                                            },
                                        ),
                                        span: Span {
                                            start: 9,
                                            end: 18,
                                            start_line: 1,
                                            start_col: 10,
                                        },
                                    },
                                    right: Expr {
                                        kind: Block(
                                            Block {
                                                statements: [],
                                                expr: Some(
                                                    Expr {
                                                        kind: Binary {
                                                            op: Add,
                                                            left: Expr {
                                                                kind: Literal(
                                                                    Literal {
                                                                        kind: Int {
                                                                            value: 3,
                                                                            suffix: None,
                                                                        },
                                                                        span: Span {
                                                                            start: 23,
                                                                            end: 24,
                                                                            start_line: 1,
                                                                            start_col: 24,
                                                                        },
                                                                    },
                                                                ),
                                                                span: Span {
                                                                    start: 23,
                                                                    end: 24,
                                                                    start_line: 1,
                                                                    start_col: 24,
                                                                },
                                                            },
                                                            right: Expr {
                                                                kind: Literal(
                                                                    Literal {
                                                                        kind: Int {
                                                                            value: 4,
                                                                            suffix: None,
                                                                        },
                                                                        span: Span {
                                                                            start: 27,
                                                                            end: 28,
                                                                            start_line: 1,
                                                                            start_col: 28,
                                                                        },
                                                                    },
                                                                ),
                                                                span: Span {
                                                                    start: 27,
                                                                    end: 28,
                                                                    start_line: 1,
                                                                    start_col: 28,
                                                                },
                                                            },
                                                        },
                                                        span: Span {
                                                            start: 23,
                                                            end: 28,
                                                            start_line: 1,
                                                            start_col: 24,
                                                        },
                                                    },
                                                ),
                                                span: Span {
                                                    start: 21,
                                                    end: 30,
                                                    start_line: 1,
                                                    start_col: 22,
                                                },
                                            },
                                        ),
                                        span: Span {
                                            start: 21,
                                            end: 30,
                                            start_line: 1,
                                            start_col: 22,
                                        },
                                    },
                                },
                                span: Span {
                                    start: 9,
                                    end: 30,
                                    start_line: 1,
                                    start_col: 10,
                                },
                            },
                        ),
                        span: Span {
                            start: 7,
                            end: 32,
                            start_line: 1,
                            start_col: 8,
                        },
                    },
                ),
                span: Span {
                    start: 0,
                    end: 32,
                    start_line: 1,
                    start_col: 1,
                },
            },
        ),
    ],
    span: Span {
        start: 0,
        end: 32,
        start_line: 1,
        start_col: 1,
    },
}
