src/bootstrap/bloodc/src/parser/snapshots/bloodc__parser__tests__break_with_value.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [],
    declarations: [
        Function(
            FnDecl {
                attrs: [],
                vis: Private,
                qualifiers: FnQualifiers {
                    is_const: false,
                    is_async: false,
                    is_unsafe: false,
                },
                name: Spanned {
                    node: SymbolU32 {
                        value: 1,
                    },
                    span: Span {
                        start: 3,
                        end: 4,
                        start_line: 1,
                        start_col: 4,
                    },
                },
                type_params: None,
                params: [],
                return_type: Some(
                    Type {
                        kind: Path(
                            TypePath {
                                segments: [
                                    TypePathSegment {
                                        name: Spanned {
                                            node: SymbolU32 {
                                                value: 2,
                                            },
                                            span: Span {
                                                start: 10,
                                                end: 13,
                                                start_line: 1,
                                                start_col: 11,
                                            },
                                        },
                                        args: None,
                                    },
                                ],
                                span: Span {
                                    start: 10,
                                    end: 13,
                                    start_line: 1,
                                    start_col: 11,
                                },
                            },
                        ),
                        span: Span {
                            start: 10,
                            end: 13,
                            start_line: 1,
                            start_col: 11,
                        },
                    },
                ),
                effects: None,
                spec_clauses: [],
                where_clause: None,
                body: Some(
                    Block {
                        statements: [],
                        expr: Some(
                            Expr {
                                kind: Loop {
                                    label: None,
                                    body: Block {
                                        statements: [],
                                        expr: Some(
                                            Expr {
                                                kind: Break {
                                                    label: None,
                                                    value: Some(
                                                        Expr {
                                                            kind: Literal(
                                                                Literal {
                                                                    kind: Int {
                                                                        value: 42,
                                                                        suffix: None,
                                                                    },
                                                                    span: Span {
                                                                        start: 29,
                                                                        end: 31,
                                                                        start_line: 1,
                                                                        start_col: 30,
                                                                    },
                                                                },
                                                            ),
                                                            span: Span {
                                                                start: 29,
                                                                end: 31,
                                                                start_line: 1,
                                                                start_col: 30,
                                                            },
                                                        },
                                                    ),
                                                },
                                                span: Span {
                                                    start: 23,
                                                    end: 31,
                                                    start_line: 1,
                                                    start_col: 24,
                                                },
                                            },
                                        ),
                                        span: Span {
                                            start: 21,
                                            end: 33,
                                            start_line: 1,
                                            start_col: 22,
                                        },
                                    },
                                },
                                span: Span {
                                    start: 16,
                                    end: 33,
                                    start_line: 1,
                                    start_col: 17,
                                },
                            },
                        ),
                        span: Span {
                            start: 14,
                            end: 35,
                            start_line: 1,
                            start_col: 15,
                        },
                    },
                ),
                span: Span {
                    start: 0,
                    end: 35,
                    start_line: 1,
                    start_col: 1,
                },
            },
        ),
    ],
    span: Span {
        start: 0,
        end: 35,
        start_line: 1,
        start_col: 1,
    },
}
